# drug-repurposing-platform

./: .dockerignore  .gitignore  Dockerfile  HOW_TO_RUN.md  HUMAN_JUDGMENT_CHECKLIST.md  PLAN_LLM_API_INTEGRATION.md  README.md  RUN_REVIEW_CHECKLIST.md  USER_GUIDE.md  docker-compose.yml  项目全览.html
LLM+RAG证据工程/: .env  .env.example  .gitignore  RA_ARCHS4_audit_report.md  README.md  pytest.ini  (+5 more)
sigreverse/: .gitignore  README.md  pyproject.toml  requirements.txt
sigreverse/configs/: cell_line_weights_atherosclerosis.csv  cell_line_weights_autoimmune.csv  default.yaml
sigreverse/data/: output_multi_disease_summary.json
sigreverse/data/gold_standard/: atherosclerosis.json  breast_cancer_er.json  type2_diabetes.json  ulcerative_colitis.json
sigreverse/data/input/: disease_signature.json  disease_signature_atherosclerosis_creeds.json  disease_signature_breast_cancer_er.json  disease_signature_type2_diabetes.json  disease_signature_ulcerative_colitis.json
sigreverse/scripts/: fetch_disease_signature.py  run.py  run_fusion_with_kg.py  test_api.py  validate_multi_disease.py  validate_pipeline.py
sigreverse/sigreverse/: __init__.py  cache.py  cmap_algorithms.py  dose_response.py  drug_standardization.py  fusion.py  io.py  ldp3_client.py  qc.py  robustness.py  scoring.py  statistics.py
sigreverse/sigreverse/evaluation/: benchmark.py  metrics.py
sigreverse/tests/: test_cache.py  test_cmap_algorithms.py  test_dose_response.py  test_evaluation.py  test_fusion.py  test_io.py  test_ldp3_client.py  test_qc.py  test_robustness.py  test_scoring.py  test_statistics.py
(+692 files in other folders)
